# async-web-crawler

./: .env.example  .env.testing.example  .gitignore  README.md  config.yaml.example  pyproject.toml  requirements.txt
demos/: day1_basic_client.py  day2_html_parser.py  day3_crawler_queue.py  day4_polite_crawler.py  day5_error_handling.py  day6_storage.py  day7_advanced_crawler.py  day7_performance_test.py  run_demo.py
docs/: api_reference.md  architecture.md  configuration.md
src/crawler/: __main__.py  advanced_crawler.py  async_crawler.py  config.py  crawler_queue.py  errors.py  exporters.py  html_parser.py  logging_config.py  models.py  monitoring.py  rate_limiter.py  retry_strategy.py  robots_parser.py  semaphore_manager.py  sitemap_parser.py  stats.py
tests/: conftest.py  test_day1_async_crawler.py  test_day2_html_parser.py  test_day3_async_crawler_crawl.py  test_day3_crawler_queue.py  test_day3_semaphore.py  test_day4_async_crawler_delays.py  test_day4_async_crawler_rate_limiting.py  test_day4_async_crawler_robots_txt.py  test_day4_async_crawler_user_agent.py  test_day4_rate_limiter.py  test_day4_robots_parser.py
tests/fixtures/: server.py
tests/integration/: test_crawl.py  test_crawl_stats.py  test_crawler_delays.py  test_crawler_retry.py  test_crawler_storage.py  test_crawler_user_agent.py  test_postgres_storage.py
tests/unit/: test_advanced_crawler.py  test_config.py  test_csv_storage.py  test_errors.py  test_exporters.py  test_html_parser.py  test_json_storage.py  test_monitoring.py  test_postgres_storage.py  test_rate_limiter.py  test_stats.py  (+4 more)
(+6 files in other folders)
