[project]
name = "crawler"
version = "0.1.0"
description = "Async web crawler learning project"
requires-python = ">=3.11"

dependencies = [
    "aiohttp",
    "aiofiles",
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]