[project]
name = "crawler"
version = "0.1.0"
description = "Async web crawler learning project"
requires-python = ">=3.11"

dependencies = [
    "aiohttp",
    "aiofiles",
    "asyncpg",
    "beautifulsoup4",
    "lxml",
    "python-dotenv",
    "PyYAML",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
markers = [
    "postgres: marks tests that require a running PostgreSQL instance (skip without CRAWLER_TEST_POSTGRES_DSN)",
]

[project.scripts]
crawler = "crawler.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]